// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`relations resolvers execution composite primary key with name should properly call PrismaClient on fetching single relation: findUniqueOrThrowPost relations call args 1`] = `
Array [
  Array [
    Object {
      "where": Object {
        "postIdCompoundName": Object {
          "color": "BLUE",
          "title": "Post 1",
        },
      },
    },
  ],
]
`;

exports[`relations resolvers execution composite primary key with name should properly call PrismaClient on fetching single relation: post with author mocked response 1`] = `
Object {
  "post": Object {
    "author": Object {
      "id": 1,
      "name": "User 1",
    },
    "color": "BLUE",
    "text": "Post text",
    "title": "Post 1",
  },
}
`;

exports[`relations resolvers execution composite unique key should properly call PrismaClient on fetching single relation: findUniqueOrThrowPost relations call args 1`] = `
Array [
  Array [
    Object {
      "where": Object {
        "title_color": Object {
          "color": "BLUE",
          "title": "Post 1",
        },
      },
    },
  ],
]
`;

exports[`relations resolvers execution composite unique key should properly call PrismaClient on fetching single relation: post with author mocked response 1`] = `
Object {
  "post": Object {
    "author": Object {
      "id": 1,
      "name": "User 1",
    },
    "color": "BLUE",
    "text": "Post text",
    "title": "Post 1",
  },
}
`;

exports[`relations resolvers execution composite unique key with name should properly call PrismaClient on fetching single relation: findUniqueOrThrowPost relations call args 1`] = `
Array [
  Array [
    Object {
      "where": Object {
        "postUniqueCompoundName": Object {
          "color": "BLUE",
          "title": "Post 1",
        },
      },
    },
  ],
]
`;

exports[`relations resolvers execution composite unique key with name should properly call PrismaClient on fetching single relation: post with author mocked response 1`] = `
Object {
  "post": Object {
    "author": Object {
      "id": 1,
      "name": "User 1",
    },
    "color": "BLUE",
    "text": "Post text",
    "title": "Post 1",
  },
}
`;

exports[`relations resolvers execution single primary key should properly call PrismaClient on fetching array relations with args: findUniqueOrThrowUser relations call args 1`] = `
Array [
  Array [
    Object {
      "where": Object {
        "id": 1,
      },
    },
  ],
  Array [
    Object {
      "where": Object {
        "id": 2,
      },
    },
  ],
]
`;

exports[`relations resolvers execution single primary key should properly call PrismaClient on fetching array relations with args: posts() relations call args 1`] = `
Array [
  Array [
    Object {
      "cursor": undefined,
      "distinct": undefined,
      "orderBy": undefined,
      "skip": 1,
      "take": 1,
      "where": PostWhereInput {
        "AND": undefined,
        "NOT": undefined,
        "OR": undefined,
        "author": undefined,
        "authorId": undefined,
        "color": undefined,
        "content": StringFilter {
          "contains": undefined,
          "endsWith": undefined,
          "equals": undefined,
          "gt": undefined,
          "gte": undefined,
          "in": undefined,
          "lt": undefined,
          "lte": undefined,
          "mode": undefined,
          "not": undefined,
          "notIn": undefined,
          "startsWith": "test",
        },
        "uuid": undefined,
      },
    },
  ],
]
`;

exports[`relations resolvers execution single primary key should properly call PrismaClient on fetching array relations with args: users with posts mocked response 1`] = `
Object {
  "users": Array [
    Object {
      "name": "Test 1",
      "posts": Array [],
    },
    Object {
      "name": "Test 2",
      "posts": Array [
        Object {
          "color": "RED",
          "uuid": "b0c0d78e-4dff-4cdd-ba23-9b417dc684e2",
        },
        Object {
          "color": "BLUE",
          "uuid": "72c8a188-3d46-45b3-b23f-7d420aa282f1",
        },
      ],
    },
  ],
}
`;

exports[`relations resolvers execution single primary key should properly call PrismaClient on fetching array relations: findUniqueOrThrowUser relations call args 1`] = `
Array [
  Array [
    Object {
      "where": Object {
        "id": 1,
      },
    },
  ],
  Array [
    Object {
      "where": Object {
        "id": 2,
      },
    },
  ],
]
`;

exports[`relations resolvers execution single primary key should properly call PrismaClient on fetching array relations: users with posts mocked response 1`] = `
Object {
  "users": Array [
    Object {
      "name": "Test 1",
      "posts": Array [],
    },
    Object {
      "name": "Test 2",
      "posts": Array [
        Object {
          "color": "RED",
          "uuid": "b0c0d78e-4dff-4cdd-ba23-9b417dc684e2",
        },
        Object {
          "color": "BLUE",
          "uuid": "72c8a188-3d46-45b3-b23f-7d420aa282f1",
        },
      ],
    },
  ],
}
`;

exports[`relations resolvers execution single primary key should properly call PrismaClient on fetching count on relations: findUniqueOrThrowPost relations call args 1`] = `
Array [
  Array [
    Object {
      "where": Object {
        "uuid": "b0c0d78e-4dff-4cdd-ba23-9b417dc684e2",
      },
    },
  ],
  Array [
    Object {
      "where": Object {
        "uuid": "72c8a188-3d46-45b3-b23f-7d420aa282f1",
      },
    },
  ],
]
`;

exports[`relations resolvers execution single primary key should properly call PrismaClient on fetching count on relations: post.author relation call args 1`] = `
Array [
  Array [
    Object {
      "include": Object {
        "_count": Object {
          "select": Object {
            "posts": true,
          },
        },
      },
    },
  ],
  Array [
    Object {
      "include": Object {
        "_count": Object {
          "select": Object {
            "posts": true,
          },
        },
      },
    },
  ],
]
`;

exports[`relations resolvers execution single primary key should properly call PrismaClient on fetching count on relations: posts with users with posts count - mocked response 1`] = `
Object {
  "posts": Array [
    Object {
      "author": Object {
        "_count": Object {
          "posts": 3,
        },
        "id": 123,
        "name": "Test",
      },
      "color": "RED",
      "uuid": "b0c0d78e-4dff-4cdd-ba23-9b417dc684e2",
    },
    Object {
      "author": Object {
        "_count": Object {
          "posts": 3,
        },
        "id": 123,
        "name": "Test",
      },
      "color": "BLUE",
      "uuid": "72c8a188-3d46-45b3-b23f-7d420aa282f1",
    },
  ],
}
`;

exports[`relations resolvers execution single primary key should properly call PrismaClient on fetching single relation: findUniqueOrThrowPost relations call args 1`] = `
Array [
  Array [
    Object {
      "where": Object {
        "uuid": "b0c0d78e-4dff-4cdd-ba23-9b417dc684e2",
      },
    },
  ],
  Array [
    Object {
      "where": Object {
        "uuid": "72c8a188-3d46-45b3-b23f-7d420aa282f1",
      },
    },
  ],
]
`;

exports[`relations resolvers execution single primary key should properly call PrismaClient on fetching single relation: posts with authors mocked response 1`] = `
Object {
  "posts": Array [
    Object {
      "author": Object {
        "id": 1,
        "name": "Test 1",
      },
      "uuid": "b0c0d78e-4dff-4cdd-ba23-9b417dc684e2",
    },
    Object {
      "author": Object {
        "id": 1,
        "name": "Test 1",
      },
      "uuid": "72c8a188-3d46-45b3-b23f-7d420aa282f1",
    },
  ],
}
`;
